--- a/tools/tests/com.liferay.ide.upgrade.problems.core.tests/projects/copyPortalSettings/portal.properties
+++ b/tools/tests/com.liferay.ide.upgrade.problems.core.tests/projects/copyPortalSettings/portal.properties
@@ -79,3 +79,97 @@
     
     
     user.groups.copy.layouts.to.user.personal.site=true
+    
+##
+## Ehcache
+##
+
+    #
+    # Set the classpath to the location of the Ehcache config file for internal
+    # caches. Edit the file specified in the property
+    # "ehcache.multi-vm.config.location" to enable clustered cache.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_MULTI_PERIOD_VM_PERIOD_CONFIG_PERIOD_LOCATION
+    # Env: LIFERAY_EHCACHE_PERIOD_SINGLE_PERIOD_VM_PERIOD_CONFIG_PERIOD_LOCATION
+    #
+    ehcache.single.vm.config.location=/ehcache/liferay-single-vm.xml
+    ehcache.multi.vm.config.location=/ehcache/liferay-multi-vm.xml
+    
+    #
+    # Set this to true to enable the Ehcache bootstrap cache loader.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_BOOTSTRAP_PERIOD_CACHE_PERIOD_LOADER_PERIOD_ENABLED
+    #
+    ehcache.bootstrap.cache.loader.enabled=false
+
+    #
+    # Input a list of comma delimited key value pair to set bootstrap loader
+    # properties for the default cache.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_BOOTSTRAP_PERIOD_CACHE_PERIOD_LOADER_PERIOD_PROPERTIES_PERIOD_DEFAULT
+    #
+    ehcache.bootstrap.cache.loader.properties.default=
+    
+    ehcache.bootstrap.cache.loader.properties.test.cache=bootstrapAsynchronously=false
+
+    #
+    # Input a list of comma delimited key value pair to set bootstrap loader
+    # properties for a specific cache.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_BOOTSTRAP_PERIOD_CACHE_PERIOD_LOADER_PERIOD_PROPERTIES_PERIOD__DOLLAR__OPENCURLYBRACE_SPECIFIC_PERIOD_CACHE_PERIOD_NAME_CLOSECURLYBRACE_
+    #
+    #ehcache.bootstrap.cache.loader.properties.${specific.cache.name}=
+
+    #
+    # Input a list of comma delimited key value pair to set replication
+    # properties for the default cache.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_REPLICATOR_PERIOD_PROPERTIES_PERIOD_DEFAULT
+    #
+    ehcache.replicator.properties.default=
+
+    #
+    # Set this to true to enable JMX integration in
+    # com.liferay.portal.cache.EhcachePortalCacheManager. Set this to false if
+    # the portal needs to be reloaded under WebSphere.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_PORTAL_PERIOD_CACHE_PERIOD_MANAGER_PERIOD_JMX_PERIOD_ENABLED
+    #
+    ehcache.portal.cache.manager.jmx.enabled=true
+
+    #
+    # Set this to true to allow Ehcache to use blocking caches. This improves
+    # performance significantly by locking on keys instead of the entire cache.
+    # The drawback is that threads can hang if the cache is not used properly.
+    # Make sure that all queries that return a miss also immediately populate
+    # the cache, or else other threads that are blocked on a query of that same
+    # key will continue to hang. Reference Ehcache's BlockingCache for more
+    # information. The blocking cache is no longer implemented by Ehcache's
+    # BlockingCache, but by Liferay's BlockingPortalCache for better safety and
+    # faster performance.
+    #
+    # Blocking cache together with transactional cache performs poorly, because
+    # transactional cache affects the cache population visibility across
+    # transactions. When transactional cache is on, blocking cache most likely
+    # does nothing useful unless the transaction window time is short. When
+    # transactional cache is off, it is better to turn on blocking cache for
+    # better database access performance.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_BLOCKING_PERIOD_CACHE_PERIOD_ALLOWED
+    #
+    ehcache.blocking.cache.allowed=false
+
+    #
+    # Set the socket timeout in milliseconds.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_SOCKET_PERIOD_SO_PERIOD_TIMEOUT
+    #
+    ehcache.socket.so.timeout=10000
+
+    #
+    # Set the start port for Ehcache socket. The port number will increase by 1
+    # until it finds an unused port.
+    #
+    # Env: LIFERAY_EHCACHE_PERIOD_SOCKET_PERIOD_START_PERIOD_PORT
+    #
+    ehcache.socket.start.port=32454
