--- a/tools/tests/com.liferay.ide.project.core.tests/pom.xml
+++ b/tools/tests/com.liferay.ide.project.core.tests/pom.xml
@@ -133,8 +133,7 @@
                 <configuration>
                     <useUIHarness>false</useUIHarness>
                     <useUIThread>false</useUIThread>
-                    <!--argLine>-Xmx1024m -XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,address=8100,server=y,suspend=y</argLine-->
-                    <argLine>-Xmx1024m</argLine>
+		    <argLine>-Xmx1024m -XX:MaxPermSize=512m -Xdebug -Xrunjdwp:transport=dt_socket,address=8100,server=y,suspend=y</argLine>
                     <systemProperties>
                         <liferay.bundles.dir>${liferay.bundles.dir}</liferay.bundles.dir>
                         <skipBundleTests>${skipBundleTests}</skipBundleTests>
